# datablaster

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  test_output.csv  test_schema.txt  test_schema_with_record.txt
benches/: my_benchmark.rs
src/: args.rs  data_gen.rs  data_repr.rs  definition.rs  lib.rs  main.rs  parser.rs  schema.rs  writer.rs
src/definition/: gen.rs  schema.rs
src/parser/: helper.rs
src/writer/: csv.rs  json.rs
