[package]
name = "datablaster"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.8.4"
serde_json = "1.0.27"
log = "0.4.14"
env_logger = "0.8.4"
nom = "6.2.1"
